--- a/css/styles.css
+++ b/css/styles.css
@@ -180,7 +180,7 @@ nav ul li a:hover {
 
 /* start: hero styles */
 #hero-image {
-    background:url("/img/2.jpg") top center no-repeat;
+    background:url("2.jpg") top center no-repeat;
     height: 820px;
 }
 
@@ -281,12 +281,12 @@ nav ul li a:hover {
 }
 
 #game-types-boxes .box.new {
-    background: url('/img/newsimage.jpg') top center no-repeat;
+    background: url('newsimage.jpg') top center no-repeat;
     background-size: cover;
 }
 
 #game-types-boxes .box.strategy {
-    background: url('/img/newslogo2.jpg') top center no-repeat;
+    background: url('newslogo2.jpg') top center no-repeat;
     background-size: cover;
 }
 
